Se realiza la vista con funcionamiento parcial (Ya registra los datos en la BD y consume la API de envio de correos) del registro de clientes a la plataforma

--- a/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
@@ -1,16 +1,50 @@
-<nav>
-  <div class="nav-wrapper">
 
-    <a routerLink="home" class="brand-logo" style="margin-left: 20px;"><i class="material-icons">directions_cars</i>Smart Vehicle App</a>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><a *ngIf="!session" routerLink="security/login">Login</a></li>
-      <li><a *ngIf="session">Logout</a></li>
-    </ul>
-  </div>
-</nav>
-
-<ul class="sidenav" id="mobile-demo">
-  <li><a *ngIf="!session" routerLink="security/login">Login</a></li>
-  <li><a *ngIf="session" routerLink="">Logout</a></li>
-</ul>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-3 bg-body">
+      <div class="container-fluid mx-5">
+          <span class="material-icons md-36">
+              time_to_leave
+          </span>
+          <a class="navbar-brand" href="#"><img class="me-3">Smart Vehicle</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+              aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" routerLink="security/client/create-client">Clientes</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Asesores</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Vehiculos</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-bs-toggle="dropdown" aria-expanded="false">
+                          Despliegame
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li>
+                              <hr class="dropdown-divider">
+                          </li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      </ul>
+                  </li>
+              </ul>
+              <form class="d-flex">
+                  <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+          </div>
+      </div>
+  </nav>
+</header>
