--- a/Smart-Vehicle-App/client/src/app/modules/security/client/create-client/create-client.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/security/client/create-client/create-client.component.html
@@ -1,1 +1,78 @@
-<p>create-client works!</p>
+<main class="mx-5 margin-form">
+    <div class="container px-5 pt-4 pb-5 my-5 bg-body box-form">
+        <form class="row g-3 needs-validation" [formGroup]="form">
+            <h2>Crear Cuenta</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="validacionDocumento" class="form-label">Tipo de documento</label>
+                    <select class="form-select" formControlName="tipo_documento" id="tipo_documento">
+                        <option value="Cédula">Cédula de ciudadania</option>
+                        <option value="Cédula">Pasaporte</option>
+                        <option value="Cédula">NIT</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        El campo Número de Documento es obligatorio.
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="validacionDocumento" class="form-label">Número de documento</label>
+                    <input type="text" class="form-control" formControlName="numero_documento" id="validacionDocumento" required />
+                    <div class="invalid-feedback">
+                        El campo Número de Documento es obligatorio.
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <label for="validacionNombreCompleto" class="form-label">Nombre completo</label>
+                    <input type="text" class="form-control" formControlName="nombre_completo" id="validacionNombreCompleto" required />
+                    <div class="invalid-feedback">
+                        El campo Nombre completo es obligatorio.
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <label for="validacionEmail" class="form-label">Email</label>
+                    <a class="navbar-brand" href="#"><span class="material-icons"> info </span></a>
+                    <div class="input-group has-validation">
+                        <input type="text" class="form-control" id="validacionEmail" formControlName="email"
+                            aria-describedby="inputGroupPrepend" required />
+                        <div class="invalid-feedback">El campo Email es obligatorio.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="validacionDepartamento" class="form-label">Departamento</label>
+                    <input type="text" class="form-control" formControlName="departamento" id="validacionDepartamento" required />
+                </div>
+                <div class="col-md-6">
+                    <label for="validacionCiudad" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" formControlName="ciudad" id="validacionCiudad" required />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="validacionDireccion" class="form-label">Direccion</label>
+                    <input type="text" class="form-control" formControlName="direccion" id="validacionDireccion" required />
+                </div>
+                <div class="col-md-6">
+                    <div class="col-md-0">
+                        <label for="validacionTelefono" class="form-label">Teléfono</label>
+                        <input type="text" class="form-control" formControlName="telefono" id="validacionTelefono" required />
+                        <div class="invalid-feedback">
+                            El campo Teléfono es obligatorio.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" (click)="Register()" type="button">Registrarse <i class="material-icons right">send</i></button>
+                </div>
+            </div>
+        </form>
+    </div>
+</main>
