--- a/Smart-Vehicle-App/client/src/app/template/footer/footer.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/footer/footer.component.html
@@ -1,23 +1,7 @@
-<footer class="page-footer light-green lighten-1">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+<footer class="">
+  <div class="container-fluid sticky-bottom">
+      <div class="footer-text">
+          <small class="d-block mb-3 text-muted">© 2021–2022 Todos los derechos reservados</small>
       </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
-        <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container">
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-    </div>
   </div>
 </footer>
