--- a/Smart-Vehicle-App/client/src/app/modules/security/login/login.component.css
+++ b/Smart-Vehicle-App/client/src/app/modules/security/login/login.component.css
@@ -1,38 +1,89 @@
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
 main {
-  flex: 1 0 auto;
+  /* font-family: 'Montserrat',Helvetica,Arial,Lucida,sans-serif; */
+  font-family: 'Nunito', sans-serif;
+  /* font-family: 'Mulish', sans-serif; */
+
+  --tam-fuente--button: 0.75rem;
 }
 
-body {
-  background: #fff;
+h2 {
+  color: #181b21;
+  font-size: var(--tam-fuente--titulo);
+  font-weight: 700;
 }
 
-.input-field input[type='date']:focus + label,
-.input-field input[type='text']:focus + label,
-.input-field input[type='email']:focus + label,
-.input-field input[type='password']:focus + label {
-  color: #e91e63;
+.box-form {
+  max-width: 40rem;
 }
 
-.input-field input[type='date']:focus,
-.input-field input[type='text']:focus,
-.input-field input[type='email']:focus,
-.input-field input[type='password']:focus {
-  border-bottom: 2px solid #e91e63;
-  box-shadow: none;
+.margin-form {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
 }
 
-.contenedor {
-  display: flex !important;
-  padding: 32px 32px 32px 32px !important;
-  max-width: 450px;
+.form-control,
+.form-select {
+  background-color: #f5f5f5;
+  border-color: #f5f5f5;
+  border-radius: 2rem;
 }
 
-.error-message p {
-  color: red;
+.form-label {
+  font-size: var(--tam-fuente--campos);
+  font-weight: 600;
+  color: #5c5d61;
 }
+
+.form-check-label {
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.btn {
+  font-size: var(--tam-fuente--button);
+  font-weight: 800;
+  text-transform: uppercase;
+  border-radius: 2rem;
+  height: 38px;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.4rem;
+}
+
+.row button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row button i {
+  font-size: 20px;
+  margin-left: 16px;
+}
+
+hr {
+  background-color: grey;
+  width: 100%;
+  text-align: center;
+}
+
+.row .d-flex {
+  align-items: center;
+  font-weight: 600;
+  color: #5c5d61;
+}
+
+.row .btn-light {
+    border-color: black;
+    border-width: 2px;
+} 
+
+.mx-5 {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
+
