--- a/Smart-Vehicle-App/client/src/app/modules/security/login/login.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/security/login/login.component.html
@@ -1,60 +1,54 @@
-<div class="section center"></div>
-
-
-<div class="container">
-  <div class="z-depth-1 grey contenedor lighten-4 row"
-    style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-
-    <form class="col s12" [formGroup]="form">
-      <div class='row center'>
-        <div class='col s12'>
-          <h5 class="teal-text">Bienvenido a Smart Vehicle</h5>
-        </div>
-      </div>
-
-      <div class='row'>
-        <div class='input-field col s12'>
-          <i class="material-icons prefix">mail_outline</i>
-          <input formControlName="username" class='validate' type='text' name='username' id='username' />
-          <label for='email'>Email</label>
+<main class="mx-5 margin-form">
+  <div class="container px-5 pt-4 pb-5 my-5 bg-body box-form">
+    <form class="row g-3 needs-validation" [formGroup]="form">
+      <h2>Iniciar Sesión</h2>
+      <div class="row">
+        <div class="d-grid gap-2">
+          <label for='email' class="form-label">Usuario</label>
+          <input formControlName="username" class='validate form-control' type='text' name='username' id='username'
+            placeholder="Ingrese su email" />
           <div *ngIf="GetForm['username'].errors && (GetForm['username'].dirty || GetForm['username'].touched)"
             class="error-message">
             <p>Por favor ingrese un correo electronico válido</p>
           </div>
         </div>
       </div>
-
-      <div class='row'>
-        <div class='input-field col s12'>
-          <i class="material-icons prefix">lock_open</i>
-          <input formControlName="password" class='validate' type='password' name='password' id='password' />
-          <label for='password'>Contraseña</label>
+      <div class="row">
+        <div class="d-grid gap-2">
+          <label for='password' class="form-label">Contraseña</label>
+          <input formControlName="password" class='validate form-control' type='password' name='password' id='password'
+            placeholder="Ingrese su contraseña" />
           <div *ngIf="GetForm['password'].errors && (GetForm['password'].dirty || GetForm['password'].touched)"
             class="error-message">
             <p>Por favor ingrese una contraseña válida</p>
           </div>
         </div>
-        <label style='float: right;'>
-          <a class='teal-text' href='#!'><b>¿Olvidó su contraseña?</b></a>
-        </label>
+      </div>
+      <div class="row">
+        <div class="d-grid gap-2">
+          <label>
+            <a style="float: right;" class='teal-text' href='#!'><b>¿Olvidó su contraseña?</b></a>
+          </label>
+        </div>
       </div>
 
-      <br />
-
-      <div class='row center'>
-        <button [disabled]="GetForm['username'].errors || GetForm['password'].errors" (click)="Login()" type='button'
-          name='btn_login' class='col s12 btn btn-small waves-effect '>
-          Iniciar Sesión
-          <i class="material-icons right">send</i>
-        </button>
+      <div class="row">
+        <div class="d-grid gap-2">
+          <button  [disabled]="GetForm['username'].errors || GetForm['password'].errors" (click)="Login()" routerLink="/client/solicitar-vehiculo" class="btn btn-primary" type="button">Iniciar Sesión <i class="material-icons right">login</i></button>
+        </div>
       </div>
+
+      <div class="row">
+        <div class="d-flex justify-content-center"><hr style="margin-right: 10px;">O<hr style="margin-left: 10px;"></div>
+    </div>
+
+    <div class="row">
+      <div class="d-grid gap-2">
+          <button routerLink="/security/client/create-client" class="btn btn-light"  type="button">Crear Cuenta <i
+                  class="material-icons right">send</i></button>
+      </div>
+  </div>
 
     </form>
   </div>
-  <div class="row s12" >
-    <a class="teal-text" style='float: right;' href="#!">Crea una cuenta nueva</a>
-  </div>
-</div>
-
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+</main>
