--- a/Smart-Vehicle-App/client/src/app/template/footer/footer.component.css
+++ b/Smart-Vehicle-App/client/src/app/template/footer/footer.component.css
@@ -1,9 +1,12 @@
+
 footer{
     font-family: 'Nunito', sans-serif;
+    
 }
 
 .footer-text {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
