Elaboración del formulario crear Advisor y su configuración en el Backend

--- a/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
@@ -29,9 +29,20 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Asesores</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-bs-toggle="dropdown" aria-expanded="false">
+                          Asesores
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" routerLink="">Iniciar Sesión</a></li>
+                          <li><a class="dropdown-item" routerLink="security/advisor/create-advisor">Registrarse</a></li>
+                          <li>
+                              <hr class="dropdown-divider">
+                          </li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      </ul>
+                  </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Vehiculos</a>
                     </li>
