--- a/Smart-Vehicle-App/client/src/app/modules/security/advisor/create-advisor/create-advisor.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/security/advisor/create-advisor/create-advisor.component.html
@@ -1,1 +1,62 @@
-<p>create-advisor works!</p>
+<main class="mx-5 margin-form">
+    <div class="container px-5 pt-4 pb-5 my-5 bg-body box-form">
+        <form class="row g-3 needs-validation" [formGroup]="form">
+            <h2>Crear asesor</h2>
+            <div class="row">
+                <div class="col-md-0">
+                    <label for="validacionDocumento" class="form-label">Número de documento</label>
+                    <input type="text" class="form-control" id="validacionDocumento" formControlName="numero_documento" required>
+                    <div class="invalid-feedback">
+                        El campo Número de Documento es obligatorio.
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-0">
+                    <label for="validacionNombreCompleto" class="form-label">Nombre completo</label>
+                    <input type="text" class="form-control" id="validacionNombreCompleto" formControlName="nombre_completo" required>
+                    <div class="invalid-feedback">
+                        El campo Nombre completo es obligatorio.
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-0">
+                    <label for="validacionEmail" class="form-label">Email</label>
+                    <a tabindex="0" class="navbar-brand" role="button" data-bs-toggle="popover" data-bs-trigger="focus"
+                        title="Dismissible popover"
+                        data-bs-content="And here's some amazing content. It's very engaging. Right?"><span
+                            class="material-icons"> info </span></a>
+                    <div class="input-group has-validation">
+                        <input type="text" class="form-control" id="validacionEmail"
+                            aria-describedby="inputGroupPrepend" formControlName="email" required>
+                        <div class="invalid-feedback">
+                            El campo Email es obligatorio.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-0">
+                    <label for="validacionTelefono" class="form-label">Teléfono</label>
+                    <input type="text" class="form-control" id="validacionTelefono" formControlName="telefono" required>
+                    <div class="invalid-feedback">
+                        El campo Teléfono es obligatorio.
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="d-flex justify-content-center">
+                    <ngx-invisible-recaptcha #captchaElem [siteKey]="siteKey">
+                    </ngx-invisible-recaptcha>
+                </div>
+            </div>
+            <div class="row">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" (click)="RegisterAdvisor()"
+                        type="button">Crear Cuenta <i class="material-icons right">send</i></button>
+                </div>
+            </div>
+        </form>
+    </div>
+</main>
