Se modifican y reorganizan los modulos y componentes del proyecto en el Frontend

--- a/Smart-Vehicle-App/client/src/styles.css
+++ b/Smart-Vehicle-App/client/src/styles.css
@@ -30,11 +30,14 @@ form .btn {
     font-weight: 800;
     text-transform: uppercase;
     border-radius: 2rem;
-    color: white;
     background-color: var(--azul-boton);
     border-color: var(--azul-boton);
 }
 
+form .nav-btn {
+    color: white;
+    background-color: var(--azul-boton);
+}
 
 
 .footer-text {
