--- a/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
@@ -22,7 +22,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" routerLink="security/login">Iniciar Sesión</a></li>
-                            <li><a class="dropdown-item" routerLink="security/client/create-client">Registrarse</a></li>
+                            <li><a class="dropdown-item" routerLink="administration/client/create-client">Registrarse</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -36,7 +36,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" routerLink="">Iniciar Sesión</a></li>
-                          <li><a class="dropdown-item" routerLink="security/advisor/create-advisor">Registrarse</a></li>
+                          <li><a class="dropdown-item" routerLink="administration/advisor/create-advisor">Registrarse</a></li>
                           <li>
                               <hr class="dropdown-divider">
                           </li>
@@ -50,7 +50,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <button class="btn btn-outline-success nav-btn" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
