Se hace merge manual con los cambios de Andres Triana

--- a/Smart-Vehicle-App/client/src/app/template/home/home.component.css
+++ b/Smart-Vehicle-App/client/src/app/template/home/home.component.css
@@ -1,57 +1,136 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css');
 
- nav ul a,
- nav .brand-logo {
-   color: #444;
- }
+header.masthead {
+  position: relative;
+  background-color: #343a40;
+  background: url('/assets/img/bg-masthead.jpg') no-repeat center center;
+  background-size: cover;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
 
- p {
-   line-height: 2rem;
- }
+header.masthead:before {
+  content: '';
+  position: absolute;
+  background-color: #444444;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+}
 
- .sidenav-trigger {
-   color: #26a69a;
- }
+@media (min-width: 768px) {
+  header.masthead {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+  }
+  header.masthead h1,
+  header.masthead .h1 {
+    font-size: 3rem;
+  }
+}
 
- .parallax-container {
-   min-height: 380px;
-   line-height: 0;
-   height: auto;
-   color: rgba(255,255,255,.9);
- }
-   .parallax-container .section {
-     width: 100%;
-   }
+.features-icons {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+.features-icons .features-icons-item {
+  max-width: 20rem;
+}
+.features-icons .features-icons-item .features-icons-icon {
+  height: 7rem;
+}
+.features-icons .features-icons-item .features-icons-icon i {
+  font-size: 4.5rem;
+}
 
- @media only screen and (max-width : 992px) {
-   .parallax-container .section {
-     position: absolute;
-     top: 40%;
-   }
-   #index-banner .section {
-     top: 10%;
-   }
- }
+.showcase .showcase-text {
+  padding: 3rem;
+}
+.showcase .showcase-img {
+  min-height: 30rem;
+  background-size: cover;
+}
+@media (min-width: 768px) {
+  .showcase .showcase-text {
+    padding: 7rem;
+  }
+}
 
- @media only screen and (max-width : 600px) {
-   #index-banner .section {
-     top: 0;
-   }
- }
+.testimonials {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+.testimonials .testimonial-item {
+  max-width: 18rem;
+}
+.testimonials .testimonial-item img {
+  max-width: 12rem;
+  box-shadow: 0px 5px 5px 0px #adb5bd;
+}
 
- .icon-block {
-   padding: 0 15px;
- }
- .icon-block .material-icons {
-   font-size: inherit;
- }
+.call-to-action {
+  position: relative;
+  background-color: #343a40;
+  background: url('/assets/img/bg-masthead.jpg') no-repeat center center;
+  background-size: cover;
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+.call-to-action:before {
+  content: '';
+  position: absolute;
+  background-color: #444444;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+}
 
- footer.page-footer {
-   margin: 0;
- }
+.section_1.section_2 {
+  background-image: linear-gradient(
+  90deg,rgba(0,0,0,0) 50%,rgba(0,0,0,0.23) 50%)!important;
+}
+
+.section_2.section_1 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #2a3039!important;
+}
+
+.section_2 {
+  max-width: 1280px;
+  margin-left: auto!important;
+  margin-right: auto!important;
+}
+
+@media (min-width: 981px) {
+  .section_1 {
+      padding: 4% 0;
+  }
+}
+
+.section_1 {
+  position: relative;
+  background-position: 50%;
+  background-size: cover;
+}
+
+.bottom_divider {
+  background: url('/assets/img/divider.svg');
+  background-size: 100% 60px;
+  bottom: 0;
+  height: 60px;
+  z-index: 1;
+}
+
+.bottom_divider {
+  display: block;
+  position: absolute;
+  pointer-events: none;
+  width: 100%;
+  left: 0;
+  right: 0;
+}
