--- a/Smart-Vehicle-App/client/src/app/template/footer/footer.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/footer/footer.component.html
@@ -1,7 +1,31 @@
-<footer class="">
-  <div class="container-fluid sticky-bottom">
-      <div class="footer-text">
-          <small class="d-block mb-3 text-muted">© 2021–2022 Todos los derechos reservados</small>
+<footer class="footer bg-light">
+  <div class="mx-5">
+      <div class="row">
+          <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+              <ul class="list-inline mb-2">
+                  <li class="list-inline-item"><a href="#!">Nosotros</a></li>
+                  <li class="list-inline-item">⋅</li>
+                  <li class="list-inline-item"><a href="#!">Contáctanos</a></li>
+                  <li class="list-inline-item">⋅</li>
+                  <li class="list-inline-item"><a href="#!">Términos de uso</a></li>
+                  <li class="list-inline-item">⋅</li>
+                  <li class="list-inline-item"><a href="#!">Política de privacidad</a></li>
+              </ul>
+              <p class="text-muted small mb-4 mb-lg-0">&copy; 2021–2022 Todos los derechos reservados</p>
+          </div>
+          <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+              <ul class="list-inline mb-0">
+                  <li class="list-inline-item me-4">
+                      <a href="#!"><i class="bi-facebook fs-3"></i></a>
+                  </li>
+                  <li class="list-inline-item me-4">
+                      <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                      <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                  </li>
+              </ul>
+          </div>
       </div>
   </div>
 </footer>
