--- a/Smart-Vehicle-App/client/src/app/template/home/home.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/home/home.component.html
@@ -7,7 +7,7 @@
                   <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
                       <div class="row">
                           <div class="col">
-                              <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+                              <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
                               <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
                               <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
                           </div>
@@ -30,7 +30,7 @@
 <section class="section_1 section_2">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 getInTouch">
                 <h4>Get In touch & We will Contact You Shortly</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, corrupti natus. Natus labore aliquid
                     debitis autem quisquam nostrum corrupti illo voluptate expedita, possimus id, recusandae error aperiam?
@@ -69,7 +69,7 @@
                     </div>
                     <div class="row">
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                            <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
               <form class="form-subscribe" id="contactFormFooter" data-sb-form-api-token="API_TOKEN">
                   <div class="row">
                       <div class="col">
-                          <input class="form-control form-control-lg" id="emailAddressBelow" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+                          <input class="form-control" id="emailAddressBelow" type="email" placeholder="Email Address" data-sb-validations="required,email" />
                           <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">Email Address is required.</div>
                           <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Email Address Email is not valid.</div>
                       </div>
