--- a/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/nav-bar/nav-bar.component.html
@@ -44,7 +44,7 @@
                       </ul>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Vehiculos</a>
+                        <a class="nav-link" routerLink="administration/vehicle/list-vehicle">Vehiculos</a>
                     </li>
 
                 </ul>
