Modificación de estilos en el home

--- a/Smart-Vehicle-App/client/src/app/template/home/home.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/home/home.component.html
@@ -7,11 +7,11 @@
                   <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
                       <div class="row">
                           <div class="col">
-                              <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+                              <input class="form-control" id="emailAddress" type="email" placeholder="Correo electrónico" data-sb-validations="required,email" />
                               <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
                               <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
                           </div>
-                          <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Enviar</button></div>
+                          <div class="col-auto"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Enviar</button></div>
                       </div>
                       <div class="d-none" id="submitSuccessMessage">
                           <div class="text-center mb-3">
@@ -177,11 +177,11 @@
               <form class="form-subscribe" id="contactFormFooter" data-sb-form-api-token="API_TOKEN">
                   <div class="row">
                       <div class="col">
-                          <input class="form-control" id="emailAddressBelow" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                          <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">Email Address is required.</div>
-                          <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Email Address Email is not valid.</div>
+                          <input class="form-control" id="emailAddressBelow" type="email" placeholder="Correo electrónico" data-sb-validations="required,email" />
+                          <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">El Correo electrónico es requerido.</div>
+                          <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Correo electrónico no válido.</div>
                       </div>
-                      <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+                      <div class="col-auto"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button></div>
                   </div>
                   <div class="d-none" id="submitSuccessMessage">
                       <div class="text-center mb-3">
