--- a/Smart-Vehicle-App/client/src/app/template/home/home.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/home/home.component.html
@@ -55,7 +55,7 @@
                         <div class="col-md-0">
                             <label for="validacionEmail" class="form-label fs-5">Email</label>
                             <a tabindex="0" class="navbar-brand" role="button" data-bs-toggle="popover"
-                                data-bs-trigger="focus" title="Dismissible popover"
+                                data-bs-trigger="focus" title="Popover title"
                                 data-bs-content="And here's some amazing content. It's very engaging. Right?"><span
                                     class="material-icons"> info </span></a>
                             <div class="input-group has-validation">
@@ -282,7 +282,7 @@
                           <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">El Correo electrónico es requerido.</div>
                           <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Correo electrónico no válido.</div>
                       </div>
-                      <div class="col-auto"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button></div>
+                      <div class="col-auto"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Enviar</button></div>
                   </div>
                   <div class="d-none" id="submitSuccessMessage">
                       <div class="text-center mb-3">
