--- a/Smart-Vehicle-App/client/src/app/template/footer/footer.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/footer/footer.component.html
@@ -1,7 +1,7 @@
-<footer class="footer bg-light">
+<footer class="footer bg-white">
   <div class="mx-5">
       <div class="row">
-          <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+          <div class="col-lg-6 h-100 text-center text-lg-start my-auto d-none d-sm-none d-md-block">
               <ul class="list-inline mb-0">
                   <li class="list-inline-item"><a href="#!">Nosotros</a></li>
                   <li class="list-inline-item">⋅</li>
@@ -25,6 +25,7 @@
                       <a href="#!"><i class="bi-instagram fs-3"></i></a>
                   </li>
               </ul>
+              <p class="text-muted small mb-4 mb-lg-0 d-block d-sm-block d-md-none">&copy; 2021–2022 Todos los derechos reservados</p>
           </div>
       </div>
   </div>
