Se realiza la implementacion del popover con ng-bootstrap

--- a/Smart-Vehicle-App/client/src/app/modules/administration/client/create-client/create-client.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/client/create-client/create-client.component.html
@@ -35,9 +35,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <label for="validacionEmail" class="form-label">Email</label>
-                    <a tabindex="0" class="navbar-brand" role="button" data-bs-toggle="popover" data-bs-trigger="focus"
-                        title="Dismissible popover"
-                        data-bs-content="And here's some amazing content. It's very engaging. Right?"><span
+                    <a tabindex="0" class="navbar-brand" placement="right" ngbPopover="El correo será su usuario para ingresar a la plataforma."><span
                             class="material-icons"> info </span></a>
                     <div class="input-group has-validation">
                         <input type="text" class="form-control" id="validacionEmail" formControlName="email"
